--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           path: "${{ github.repository }}"
+      # Set ANSIBLE_ROLES_PATH to the directory where the roles are located
+      - name: Set ANSIBLE_ROLES_PATH
+        run: echo "::set-env name=ANSIBLE_ROLES_PATH::${{ github.repository }}/ifalatik/aoc2024/roles"
       - uses: gofrolist/molecule-action@v2
         with:
           molecule_working_dir: "${{ github.repository }}/ifalatik/aoc2024/extensions"
