initial solution for day2 task 1
this is super inefficient, as each loop over handle_report.yml executes until the end, instead of breaking early. (see https://github.com/ansible/ansible/issues/84443)

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
   ],
 
   "remoteEnv": {
-    "ANSIBLE_ROLES_PATH": "/home/vscode/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles:/workspace/collections/ansible_collections/ifalatik/aoc2024/roles"
+    "ANSIBLE_ROLES_PATH": "/home/vscode/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles:/workspace/collections/ansible_collections/ifalatik/aoc2024/roles",
+    "ANSIBLE_COLLECTIONS_PATH": "/home/vscode/.ansible/collections:/usr/share/ansible/collections:/workspace/collections"
   },
 
   "updateRemoteUserUID": true,
