--- a/ifalatik/aoc2024/extensions/molecule/default/converge.yml
+++ b/ifalatik/aoc2024/extensions/molecule/default/converge.yml
@@ -31,3 +31,17 @@
       ansible.builtin.assert:
         that:
           - day1_output | int == 31
+
+    - name: Run day2 role for task1
+      ansible.builtin.include_role:
+        name: day2
+        tasks_from: task1.yml
+      vars:
+        day2_input1: "{{ lookup('file', 'day2_test_input1.txt') }}"
+    - name: Read output
+      ansible.builtin.set_fact:
+        day2_output: "{{ lookup('file', 'out/day2_result1.txt') | trim }}"
+    - name: Assert correct value
+      ansible.builtin.assert:
+        that:
+          - day2_output | int == 2
