--- a/ifalatik/aoc2024/extensions/molecule/default/molecule.yml
+++ b/ifalatik/aoc2024/extensions/molecule/default/molecule.yml
@@ -1,5 +1,12 @@
 ---
 
+provisioner:
+  name: ansible
+  config_options:
+    defaults:
+      display_ok_hosts: false
+      display_skipped_hosts: false
+
 dependency:
   name: galaxy
   options:
