--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,4 +9,4 @@ jobs:
           path: "${{ github.repository }}"
       - uses: gofrolist/molecule-action@v2
         with:
-          molecule_working_dir: "${{ github.repository }}/ifalatik/aoc2024/extensions"
+          molecule_working_dir: "${{ github.repository }}/extensions"
