set clone into path for action to properly clone as a collection

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          path: "${{ github.repository }}"
+          path: "~/.ansible/collections/ansible_collections/ifalatik/aoc2024/${{ github.repository }}"
       - uses: gofrolist/molecule-action@v2
         with:
-          molecule_working_dir: "${{ github.repository }}/extensions"
+          molecule_working_dir: "~/.ansible/collections/ansible_collections/ifalatik/aoc2024/${{ github.repository }}/extensions"
