--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,10 +8,10 @@ jobs:
         with:
           path: "collections/ansible_collections/ifalatik/aoc2024"
       # move molecule directory to the root of the repository
-      - run: mv "${{ github.workspace }}/extensions/molecule" "${{ github.workspace }}/molecule"
+      - run: mv "${{ github.workspace }}/collections/ansible_collections/ifalatik/aoc2024/extensions/molecule" "${{ github.workspace }}/collections/ansible_collections/ifalatik/aoc2024/molecule"
       - uses: gofrolist/molecule-action@v2
         with:
-          molecule_working_dir: "${{ github.workspace }}"
+          molecule_working_dir: "${{ github.workspace }}/collections/ansible_collections/ifalatik/aoc2024"
         env:
           ANSIBLE_COLLECTIONS_PATH: ${{ github.workspace }}/../../../:~/.ansible/collections:/usr/share/ansible/collections
           ANSIBLE_ROLES_PATH: ${{ github.workspace }}/roles:~/.ansible/roles:/usr/share/ansible/roles
