--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,15 @@ jobs:
       - uses: actions/checkout@v2
         with:
           path: "collections/ansible_collections/ifalatik/aoc2024"
-      # move molecule directory to the root of the repository
-      - run: mv "${{ github.workspace }}/collections/ansible_collections/ifalatik/aoc2024/extensions/molecule" "${{ github.workspace }}/collections/ansible_collections/ifalatik/aoc2024/molecule"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+          cache: 'pip' # caching pip dependencies
+      - name: Install dependencies
+        run: pip install -r collections/ansible_collections/ifalatik/aoc2024/.devcontainer/requirements.txt
+      - name: Move molecule directory
+        run: mv "${{ github.workspace }}/collections/ansible_collections/ifalatik/aoc2024/extensions/molecule" "${{ github.workspace }}/collections/ansible_collections/ifalatik/aoc2024/molecule"
       - uses: gofrolist/molecule-action@v2
         with:
           molecule_working_dir: "${{ github.workspace }}/collections/ansible_collections/ifalatik/aoc2024"
