--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,11 +14,8 @@ jobs:
           cache: 'pip' # caching pip dependencies
       - name: Install dependencies
         run: pip install -r collections/ansible_collections/ifalatik/aoc2024/.devcontainer/requirements.txt
-      - name: Move molecule directory
-        run: mv "${{ github.workspace }}/collections/ansible_collections/ifalatik/aoc2024/extensions/molecule" "${{ github.workspace }}/collections/ansible_collections/ifalatik/aoc2024/molecule"
-      - uses: gofrolist/molecule-action@v2
-        with:
-          molecule_working_dir: "${{ github.workspace }}/collections/ansible_collections/ifalatik/aoc2024"
+      - name: Run molecule test
+        run: cd ${{ github.workspace }}/collections/ansible_collections/ifalatik/aoc2024/extensions/molecule && molecule test
         env:
           ANSIBLE_COLLECTIONS_PATH: ${{ github.workspace }}/../../../:~/.ansible/collections:/usr/share/ansible/collections
           ANSIBLE_ROLES_PATH: ${{ github.workspace }}/roles:~/.ansible/roles:/usr/share/ansible/roles
