--- a/roles/day2/tasks/task1.yml
+++ b/roles/day2/tasks/task1.yml
@@ -5,6 +5,7 @@
   ifalatik.aoc2024.aoc_input:
     day: 2
     task_number: 1
+    single_input: true
 
 - name: Set number of safe reports to 0
   ansible.builtin.set_fact:
@@ -13,6 +14,8 @@
 # Iterate over each line of input (each report)
 - name: "Calculate number of safe reports"
   ansible.builtin.include_tasks: calculate_safe_reports.yml
+  vars:
+    problem_dampener: false
   with_list: "{{ input_lines_day2_task1 }}"
   loop_control:
     loop_var: report
