--- a/playbooks/playbook.yml
+++ b/playbooks/playbook.yml
@@ -22,12 +22,22 @@
         day1_input2: "{{ day1_input }}"
 
 
-- name: Solve day 2
+- name: Solve day 2 task 1
   hosts: localhost
   gather_facts: false
-  tags: day2
+  tags: [day2, day2_task1]
   tasks:
     - name: Solve day 2 task 1
       ansible.builtin.include_role:
         name: day2
         tasks_from: task1.yml
+
+- name: Solve day 2 task 2
+  hosts: localhost
+  gather_facts: false
+  tags: [day2, day2_task2]
+  tasks:
+    - name: Solve day 2 task 2
+      ansible.builtin.include_role:
+        name: day2
+        tasks_from: task2.yml
