--- a/roles/day2/tasks/calculate_safe_reports.yml
+++ b/roles/day2/tasks/calculate_safe_reports.yml
@@ -13,10 +13,19 @@
 - name: Initialize report safety variables
   ansible.builtin.set_fact:
     report_is_safe: true
-    previous_number: null
 
-- name: Check if report is safe
+- name: Check if report is safe without dampener
   ansible.builtin.include_tasks: handle_report.yml
+  when: not problem_dampener
+  with_list: "{{ report | split(' ') }}"
+  loop_control:
+    loop_var: current_number
+    extended: true
+    break_when: not report_is_safe  # this doesn't properly work, as the loop continues after the first false
+
+- name: Check if report is safe with dampener
+  ansible.builtin.include_tasks: handle_report_with_dampener.yml
+  when: problem_dampener
   with_list: "{{ report | split(' ') }}"
   loop_control:
     loop_var: current_number
